# CTL_killing_insufficient

./: README.md
data/: coopTest.R  mousedata.R  neighboursTransform.R  processStats.R  processStatsR1.R
data/boxAnalysis/: IFNn1_k16_normtest_1_box.csv  IFNn1_k16_normtest_2_box.csv  IFNn1_k16_normtest_3_box.csv  IFNn5_k16_normtest_1_box.csv  IFNn5_k16_normtest_2_box.csv  IFNn5_k16_normtest_3_box.csv
data/mousedata/: means.csv  mousedata.csv
data/odedata/: odedata.csv
data/processedStats/: growth.csv  n1_k4_edge_0.csv
data/stats/: stats_1548032288.csv
data/stats/IFNn1_k16_edge_0/: stats_1548044465.csv  stats_1548044580.csv  stats_1548178631.csv  stats_1548178647.csv  stats_1548621995.csv  stats_1548621997.csv  stats_1548622000.csv  stats_1548622002.csv  stats_1548641651.csv  stats_1548643723.csv
data/stats/IFNn1_k16_normtest/: stats_1548149966.csv  stats_1548178426.csv  stats_1548709328.csv  stats_1548709331.csv  stats_1548709333.csv  stats_1548709336.csv  stats_1548709338.csv  stats_1548709341.csv  stats_1548709343.csv
data/stats/IFNn1_k4_edge_0/: stats_1548044467.csv  stats_1548044600.csv  stats_1548708916.csv  stats_1548708919.csv  stats_1548708921.csv  stats_1548708924.csv  (+4 more)
figure_scripts/: .RData  .Rhistory  agent_based_model_instructions  f1.Rmd  f1_bw.Rmd  f2.Rmd  f3.Rmd  f4.Rmd  f5.Rmd  supplement.Rmd
templateBuild/: generateSimulationFolders.R  populateDir.R
templateBuild/configTemplates/: IFNn1Parms.csv  IFNn5Parms.csv  growthParms.csv  n1Parms.csv  n5Parms.csv
templateBuild/src/: CMakeLists.txt  functions.h  main.cpp  structs.h
(+53 files in other folders)
